--- a/Hackers-Poulette-Form/templates/thank_you.html
+++ b/Hackers-Poulette-Form/templates/thank_you.html
@@ -20,7 +20,7 @@
         background-color: #f9f9f9;
       }
       h1, h4 {
-        color: #007bff;
+        color: #4caf50;
       }
       ul {
         list-style-type: none;
