--- a/Hackers-Poulette-Form/templates/thank_you.html
+++ b/Hackers-Poulette-Form/templates/thank_you.html
@@ -19,7 +19,8 @@
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         background-color: #f9f9f9;
       }
-      h1, h4 {
+      h1,
+      h4 {
         color: #4caf50;
       }
       ul {
@@ -39,15 +40,25 @@
     <div>
       <h1>Thank You for Contacting Us!</h1>
       <h3>Here is the information you submitted:</h3>
+      {% if contact %}
       <ul>
-        <li><strong>First Name:</strong> {{ data['first_name'] }}</li>
-        <li><strong>Last Name:</strong> {{ data['last_name'] }}</li>
-        <li><strong>Email:</strong> {{ data['email'] }}</li>
-        <li><strong>Country:</strong> {{ data['country'] }}</li>
-        <li><strong>Gender:</strong> {{ data['gender'] }}</li>
-        <li><strong>Message:</strong> {{ data['message'] }}</li>
-        <li><strong>Subjects:</strong> {{ ''.join(data['subjects']) }}</li>
+        <li><strong>First Name:</strong> {{ contact.first_name }}</li>
+        <li><strong>Last Name:</strong> {{ contact.last_name }}</li>
+        <li><strong>Email:</strong> {{ contact.email }}</li>
+        <li><strong>Country:</strong> {{ contact.country }}</li>
+        <li><strong>Gender:</strong> {{ contact.gender }}</li>
+        <li><strong>Message:</strong> {{ contact.message }}</li>
+        {% if contact.subject_repair %}
+        <li><strong>Subject:</strong> Repair</li>
+        {% endif %} {% if contact.subject_order %}
+        <li><strong>Subject:</strong> Order</li>
+        {% endif %} {% if contact.subject_other %}
+        <li><strong>Subject:</strong> Other</li>
+        {% endif %}
       </ul>
+      {% else %}
+      <p>No contact found.</p>
+      {% endif %}
       <h4>We will get back to you shortly.</h4>
     </div>
   </body>
